@@ -3,11 +3,14 @@
     user visible changes, client:
     * When using --run and script fails, exit code is passed correctly.
     * Proper downloading for all possible required items when target_os != current_os (offline sync).
+    * Fixed: When running compiled instl in interactive mode exception was raised when instlClient and instlAdmin
+        defined the same const values.
 
     programmer visible changes:
     * init_download_tool method added to platformHelper so that the dl_tool can be initialized after the yaml files were read.
     * New defaults in main.yaml: Win_ALL_OS_NAMES, Mac_ALL_OS_NAMES.
     * Correct list of target OS names is produced in case TARGET_OS != CURRENT_OS.
+    * Calling add_const_config_variable twice will not raise exception if the new and previous values are identical.
 
 24/2/2014 0.8.6 Shai Shasag <shai@waves.com>
 
